--- a/index.html
+++ b/index.html
@@ -6,7 +6,15 @@
 </head>
 <body>
   <h1>Rachael's Website</h1>
-  <nav>My Menu</nav>
+  <nav>
+    <ul class="main-menu">
+      <li>Link 1</li>
+      <li>Link 2</li>
+      <li>Link 3</li>
+      <li>Link 4</li>
+      <li>Link 5</li>
+    </ul>
+  </nav>
   <main>
     <h2>About Me</h2>
     <p>Rachael is a student at the University of Pittsburgh studying computer science and English writing. 
