--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -8,7 +8,7 @@
   <h1>Rachael's Website</h1>
   <nav>
     <ul class="main-menu">
-      <li>Link 1</li>
+      <li><a href="portfolio">Final Portfolio</a></li>
       <li>Link 2</li>
       <li>Link 3</li>
       <li>Link 4</li>
@@ -16,13 +16,8 @@
     </ul>
   </nav>
   <main>
-    <h2>About Me</h2>
-    <p>Rachael is a student at the University of Pittsburgh studying computer science and English writing. 
-    When she’s not thinking up a new function for her programming projects or wracking her brain for the next perfect 
-    line in her short story, Rachael likes to spend time traveling outdoors. At home, this means hiking in the woods 
-    or up to not-so-high mountain peaks. Occasionally she gets the chance to travel to far-off places, 
-    where she loves exploring the nooks and crannies of small towns. One day Rachael hopes to write the stories for 
-    the next great video games.</p>
+    <h2>My Portfolio</h2>
+    <p>Portfolio begins here.</p>
   </main>
   <footer>My footer</footer>
 </body>
