--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html>
 <head>
   <title>Rachael's Website</title>
-  <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" type="text/css" href="/style.css">
 </head>
 <body>
   <h1>Rachael's Website</h1>
   <nav>
     <ul class="main-menu">
-      <li><a href="portfolio">Final Portfolio</a></li>
+      <li><a href="/portfolio">Final Portfolio</a></li>
       <li>Link 2</li>
       <li>Link 3</li>
       <li>Link 4</li>
