--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
   <nav>
     <ul class="main-menu">
       <li><a href="/portfolio/">Final Portfolio</a></li>
-      <li>Link 2</li>
-      <li>Link 3</li>
-      <li>Link 4</li>
-      <li>Link 5</li>
+      <li><a href="/work-1/">Work-1</a></li>
+      <li><a href="/work-2/">Work-2</a></li>
+      <li><a href="/skills/">Skills</a></li>
+      <li><a href="/presentation/">Presentation</a></li>
     </ul>
   </nav>
   <main>
