--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -13,6 +13,7 @@
       <li><a href="/work-2/">Work-2</a></li>
       <li><a href="/skills/">Skills</a></li>
       <li><a href="/presentation/">Presentation</a></li>
+      <li><a href="/back-to-main/">Back to Main</a></li>
     </ul>
   </nav>
   <main>
