--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <h1>Rachael's Website</h1>
   <nav>
     <ul class="main-menu">
+      <li><a href="/home/">Home</a></li>
       <li><a href="/portfolio/">Final Portfolio</a></li>
       <li><a href="/work-1/">Work-1</a></li>
       <li><a href="/work-2/">Work-2</a></li>
