--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -8,12 +8,12 @@
   <h1>Rachael's Website</h1>
   <nav>
     <ul class="main-menu">
+      <li><a href="/home/">Home</a></li>
       <li><a href="/portfolio/">Final Portfolio</a></li>
       <li><a href="/work-1/">Work-1</a></li>
       <li><a href="/work-2/">Work-2</a></li>
       <li><a href="/skills/">Skills</a></li>
       <li><a href="/presentation/">Presentation</a></li>
-      <li><a href="/back-to-main/">Back to Main</a></li>
     </ul>
   </nav>
   <main>
