--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       <li><a href="/presentation/">Presentation</a></li>
     </ul>
   </nav>
+  <button class="button button4">12px</button>
   <main>
     <h2>About Me</h2>
     <p>Rachael is a student at the University of Pittsburgh studying computer science and English writing. 
