--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
   <link rel="stylesheet" type="text/css" href="/style.css">
 </head>
 <body>
-  <h1>Rachael's Website</h1>
+  <div align="center">
+    <h1>Rachael's Website</h1>
+  </div>
   <nav>
     <ul class="main-menu">
       <li><a href="/home/">Home</a></li>
@@ -17,7 +19,9 @@
     </ul>
   </nav>
   <main>
-    <h2>About Me</h2>
+    <div align="center">
+    <h1>About Me</h1>
+  </div>
     <p>Rachael is a student at the University of Pittsburgh studying computer science and English writing. 
     When she’s not thinking up a new function for her programming projects or wracking her brain for the next perfect 
     line in her short story, Rachael likes to spend time traveling outdoors. At home, this means hiking in the woods 
