--- a/index.html
+++ b/index.html
@@ -9,14 +9,16 @@
     <h1>Rachael's Website</h1>
   </div>
   <nav>
-    <ul class="main-menu">
-      <li><a href="/home/">Home</a></li>
-      <li><a href="/portfolio/">Final Portfolio</a></li>
-      <li><a href="/work-1/">Work-1</a></li>
-      <li><a href="/work-2/">Work-2</a></li>
-      <li><a href="/skills/">Skills</a></li>
-      <li><a href="/presentation/">Presentation</a></li>
-    </ul>
+    <div align="center">
+      <ul class="main-menu">
+        <li><a href="/home/">Home</a></li>
+        <li><a href="/portfolio/">Final Portfolio</a></li>
+        <li><a href="/work-1/">Work-1</a></li>
+        <li><a href="/work-2/">Work-2</a></li>
+        <li><a href="/skills/">Skills</a></li>
+        <li><a href="/presentation/">Presentation</a></li>
+      </ul>
+     </div>
   </nav>
   <main>
     <div align="center">
