--- a/work-1/index.html
+++ b/work-1/index.html
@@ -17,7 +17,7 @@
     </ul>
   </nav>
   <main>
-    <h2>Work-1</h2>
+    <h2>Reflection</h2>
     <p>Work-1 goes here.</p>
   </main>
   <footer>My footer</footer>
