--- a/index.html
+++ b/index.html
@@ -24,12 +24,14 @@
     <div align="center">
     <h1>About Me</h1>
   </div>
+  <div class="boxed">
     <p>Rachael is a student at the University of Pittsburgh studying computer science and English writing. 
     When she’s not thinking up a new function for her programming projects or wracking her brain for the next perfect 
     line in her short story, Rachael likes to spend time traveling outdoors. At home, this means hiking in the woods 
     or up to not-so-high mountain peaks. Occasionally she gets the chance to travel to far-off places, 
     where she loves exploring the nooks and crannies of small towns. One day Rachael hopes to write the stories for 
     the next great video games.</p>
+  </div>
   </main>
   <footer>My footer</footer>
 </body>
