--- a/work-1/index.html
+++ b/work-1/index.html
@@ -5,16 +5,20 @@
   <link rel="stylesheet" type="text/css" href="/style.css">
 </head>
 <body>
-  <h1>Rachael's Website</h1>
+<div align="center">
+    <h1>Rachael's Website</h1>
+  </div>
   <nav>
-    <ul class="main-menu">
-      <li><a href="/home/">Home</a></li>
-      <li><a href="/work-1/">Work-1</a></li>
-      <li><a href="/work-2/">Work-2</a></li>
-      <li><a href="/skills/">Skills</a></li>
-      <li><a href="/presentation/">Presentation</a></li>
-      <li><a href="/portfolio/">Final Portfolio</a></li>
-    </ul>
+    <div align="center">
+      <ul class="main-menu">
+        <li><a href="/home/">Home</a></li>
+        <li><a href="/work-1/">Work-1</a></li>
+        <li><a href="/work-2/">Work-2</a></li>
+        <li><a href="/skills/">Skills</a></li>
+        <li><a href="/presentation/">Presentation</a></li>
+        <li><a href="/portfolio/">Final Portfolio</a></li>
+      </ul>
+     </div>
   </nav>
   <main>
     <h2>Reflection</h2>
