--- a/work-1/index.html
+++ b/work-1/index.html
@@ -22,7 +22,12 @@
   </nav>
   <main>
     <h2>Reflection</h2>
-    <p>Work-1 goes here.</p>
+    <p>Reflection goes here.</p>
+    <nav>
+       <ul class="writing-samples">
+         <li><a href="/writing-samples/"Writing Samples</a></li>
+      </ul>
+      </div>
   </main>
   <footer>My footer</footer>
 </body>
