--- a/work-1/sample-2/index.html
+++ b/work-1/sample-2/index.html
@@ -1,1 +1,33 @@
-font-family: "Courier New", Courier, monospace;
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Rachael's Website</title>
+  <link rel="stylesheet" type="text/css" href="/style.css">
+</head>
+<body>
+  <div align="center">
+    <h1>Rachael's Website</h1>
+  </div>
+  <nav>
+    <div align="center">
+      <ul class="main-menu">
+        <li><a href="/home/">Home</a></li>
+        <li><a href="/work-1/">Work-1</a></li>
+        <li><a href="/work-2/">Work-2</a></li>
+        <li><a href="/skills/">Skills</a></li>
+        <li><a href="/presentation/">Presentation</a></li>
+        <li><a href="/portfolio/">Final Portfolio</a></li>
+      </ul>
+     </div>
+  </nav>
+  <main>
+    <div align="center">
+    <h1>Sample 1</h1>
+  </div>
+  <div class="boxed">
+    <p>Sample-1</p>
+  </div>
+  </main>
+  <footer>My footer</footer>
+</body>
+</html>
