--- a/work-1/sample-1/index.html
+++ b/work-1/sample-1/index.html
@@ -22,10 +22,14 @@
   </nav>
   <main>
     <div align="center">
-    <h1>Sample 1</h1>
+    <h1>Fake Craig's List Ad</h1>
   </div>
   <div class="boxed">
-    <p>Sample-1</p>
+    <p>For sale: Highway to Hell Mobile. Price: 1 soul. This vehicle is equipped with flame decals 
+      hand-painted by the Devil himself and is guaranteed to get you to the fiery gates as soon as it’s your time. 
+      Unique features of this vehicle include: heating that will literally make you melt in your seat and a CD mixtape 
+      containing hits like “Hell’s Bells” and “Runnin’ with the Devil.” It does not include air conditioning or breaks. 
+      NOTE: THE HIGHWAY TO HELL MOBILE IS AVAILABLE FOR ONE-TIME USE ONLY. For more information, please call 666-666-6667.</p>
   </div>
   </main>
   <footer>My footer</footer>
