--- a/work-1/index.html
+++ b/work-1/index.html
@@ -24,10 +24,11 @@
     <h2>Reflection</h2>
     <p>Reflection goes here.</p>
     <nav>
-       <ul class="writing-samples">
-         <li><a href="/writing-samples/"Writing Samples</a></li>
+      <ul class="writing-samples">
+         <li><a href="/writing-sample1/">Writing Sample 1</a></li>
+         <li><a href="/writing-sample2/">Writing Sample 2</a></li>
       </ul>
-      </div>
+   </nav>
   </main>
   <footer>My footer</footer>
 </body>
