--- a/work-1/sample-1/index.html
+++ b/work-1/sample-1/index.html
@@ -31,6 +31,12 @@
       containing hits like “Hell’s Bells” and “Runnin’ with the Devil.” It does not include air conditioning or breaks. 
       NOTE: THE HIGHWAY TO HELL MOBILE IS AVAILABLE FOR ONE-TIME USE ONLY. For more information, please call 666-666-6667.</p>
   </div>
+    <nav>
+      <ul class="writing-samples">
+         <li><a href="/writing-sample1/">Writing Sample 1</a></li>
+         <li><a href="/writing-sample2/">Writing Sample 2</a></li>
+      </ul>
+   </nav>
   </main>
   <footer>My footer</footer>
 </body>
