--- a/work-1/sample-2/index.html
+++ b/work-1/sample-2/index.html
@@ -39,6 +39,12 @@
       interested in both writing/literature and technology. 
     </p>
   </div>
+    <nav>
+      <ul class="writing-samples">
+         <li><a href="/writing-sample1/">Writing Sample 1</a></li>
+         <li><a href="/writing-sample2/">Writing Sample 2</a></li>
+      </ul>
+   </nav>
   </main>
   <footer>My footer</footer>
 </body>
