--- a/work-1/index.html
+++ b/work-1/index.html
@@ -25,8 +25,8 @@
     <p>Reflection goes here.</p>
     <nav>
       <ul class="writing-samples">
-         <li><a href="/writing-sample1/">Writing Sample 1</a></li>
-         <li><a href="/writing-sample2/">Writing Sample 2</a></li>
+         <li><a href="work-1/writing-sample1/">Writing Sample 1</a></li>
+         <li><a href="work-1/writing-sample2/">Writing Sample 2</a></li>
       </ul>
    </nav>
   </main>
