--- a/work-1/sample-2/index.html
+++ b/work-1/sample-2/index.html
@@ -40,8 +40,8 @@
   </div>
     <nav>
       <ul class="writing-samples">
-         <li><a href="/writing-sample1/">Writing Sample 1</a></li>
-         <li><a href="/writing-sample2/">Writing Sample 2</a></li>
+         <li><a href="/sample-1/">Writing Sample 1</a></li>
+         <li><a href="/sample-2/">Writing Sample 2</a></li>
       </ul>
    </nav>
   </main>
