--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     where she loves exploring the nooks and crannies of small towns. One day Rachael hopes to write the stories for 
     the next great video games.</p>
   </div>
+    <img src="/SnCo.jpg" alt="Shakespeare & Co.">
   </main>
 </body>
 </html>
