--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     where she loves exploring the nooks and crannies of small towns. One day Rachael hopes to write the stories for 
     the next great video games.</p>
   </div>
-    <h2><img src="/SnCo.jpg" alt="Shakespeare and Co." style="width:350px;height:450px;"><h2>
+    <h2><img src="/SnCo.jpg" id="snco" alt="Shakespeare and Co."<h2>
   </main>
 </body>
 </html>
