--- a/work-1/index.html
+++ b/work-1/index.html
@@ -22,8 +22,10 @@
   </nav>
   <main>
     <h2>Reflection</h2>
-    <p>Reflection goes here.</p>
-    <nav>
+    <div class="boxed">
+      <p>Reflection goes here.</p>
+    </div>
+   <nav>
       <ul class="writing-samples">
          <li><a href="/work-1/sample-1/">Writing Sample 1</a></li>
          <li><a href="/work-1/sample-2/">Writing Sample 2</a></li>
