--- a/work-1/index.html
+++ b/work-1/index.html
@@ -23,7 +23,44 @@
   <main>
     <h2>Reflection</h2>
     <div class="boxed">
-      <p>Reflection goes here.</p>
+      <p>I have approached the assignments in class so far with thoughtfulness and creativity. I have a poor habit of
+        subconsciously putting up a mental block on my creativity for fear that what I write won’t be good or come out 
+        the way I intended it. In the first assignment where I made a fake Craig’s List “For sale” post, I 
+        tried to just let my imagination run wild with only minor tweaking later. In addition to being creative, 
+        I tried to stay true to myself in the “About Me” section, valuing my interests over something that might make the 
+        page seem “cooler.” In this way, I hope that my website gives off an air of authenticity. This is the approach I 
+        hope to continue to take with the rest of the creative writing-based assignments. When it comes to my website, 
+        I originally wanted a modern, simplistic feel because I tend to like websites I see online 
+        that are like this. I implemented a black and white theme and immediately disliked it. It felt too 
+        formal and stiff, and that doesn’t match my personality. While I’m still working with simplicity, I wanted to give
+        my blog a warm, comforting feel to it. I implemented a new color scheme of browns and whites and included a 
+        background with wood, coffee, a laptop, and pen and paper. My new design looks more like a blog and feels more 
+        personal to me. Because I changed my design idea slightly, I had to revise my original design idea post to be
+        more fitting to this theme. For my current design, I have included margins and buffers in the text of the body to 
+        make it look like it is being written on the wood surface of the background. I am using white text with aliceblue 
+        details. I decided to make my links look like buttons, adding a slight change to white when the mouse hovers over 
+        them and small shadows behind them to give the links contrast from the background. I implemented two sets of links. 
+        The first for the main menu are in-line orientation across the top while the second menu for my work-1 writing 
+        samples are organized in a vertical orientation. I did this to distinguish between the two menus. Around my text, 
+        I’ve implemented a box outline with a groove as the line. My hope is that the box separates the text from the rest 
+        of the page and, in the event of multiple posts on a page, would make each post stand out. I went with the all-caps, 
+        Copperplate font for the headers of my web pages. For the body text font, I used Courier New. I liked the newspaper 
+        vibe that this font gave off, and I felt that it was unique yet plain enough that it would not be distracting or 
+        difficult to read. On my “About Me” page, I included a picture of myself standing in front of the Shakespeare and 
+        Company store in Paris. I chose this picture because it fits with the theme and is representative of my interests 
+        in writing and traveling. Two of the most challenging aspects of creating my website were making sure the links 
+        went to the appropriate pages and adjusting the alignment and spacing. In particular, it was difficult to size 
+        the image of myself right so that I didn’t look disproportionate. While not physically difficult, it was also 
+        hard to choose a color scheme for my website. I went through a lot of trial and error to find something that I 
+        liked. Moving forward, I would like to understand picture properties better. For example, I would like to 
+        know how to insert an image without changing the background image. I would also like to learn how to align 
+        multiple images and work with stylizing images to have borders or filters. In addition, I would like to work with 
+        columns and learn how to have one column at the top of the page and two at the bottom. Stylistically, I want to 
+        learn how to emphasize certain elements of my website. Right now, everything is very uniform, which looks nice, 
+        but I wonder if emphasizing certain elements would make it look better. I’m thinking of playing around with font 
+        colors and sizes to do this. Lastly, I would like to take my audience into consideration when thinking about user 
+        accessibility. I want my audience to be able to easily navigate from page to page and have the style overall work 
+        well enough that the content of the website is the main focus.</p>
     </div>
    <nav>
       <ul class="writing-samples">
