--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -22,7 +22,9 @@
   </nav>
   <main>
     <h2>My Portfolio</h2>
-    <p>Portfolio begins here.</p>
+    <div class="boxed">
+      <p>Portfolio begins here.</p>
+    </div>
   </main>
 </body>
 </html>
