--- a/presentation/index.html
+++ b/presentation/index.html
@@ -22,7 +22,9 @@
   </nav>
   <main>
     <h2>Presentation</h2>
-    <p>Presentation goes here.</p>
+    <div class="boxed">
+      <p>Presentation goes here.</p>
+    </div>
   </main>
 </body>
 </html>
