--- a/work-2/index.html
+++ b/work-2/index.html
@@ -22,7 +22,9 @@
   </nav>
   <main>
     <h2>Work-2</h2>
-    <p>Work-2 goes here.</p>
+    <div class="boxed">
+      <p>Work-2 goes here.</p>
+    </div>
   </main>
 </body>
 </html>
