--- a/work-1/sample-2/index.html
+++ b/work-1/sample-2/index.html
@@ -24,19 +24,17 @@
     <h2>Website Design Idea</h2>
   </div>
   <div class="boxed">
-    <p>For me, engaging websites are those that are simplistic enough that the 
-      messages or information they are trying to convey stand out. Visually, this may include a theme of 
-      basic colors with a vibrant accent color and stylish, yet not too daring, buttons and fonts. What makes 
-      websites memorable are animations such as those implemented with hover and unique design elements like a 
-      different mouse or innovative layout. 
-      I would like my design to feel simplistic and modern. Instead of having one color as the 
-      background, I’ll instead use a faded black and white image. I would like to use a neon color for the 
-      accent, but only implement the accent in places such as the scroll bar, in between links, etc. 
-      Another source of color in my website might be images that I’ve taken, having the images and text 
-      organized into one or two columns. I’d also like my font style to be similar to a paper newspaper, 
-      using a font like Bookman Old Style to accomplish this. My ideal audience would be people that are 
-      interested in both writing/literature and technology. 
-    </p>
+    <p>For me, engaging websites are those that are simplistic enough that the messages or information they are trying to 
+      convey stand out. Visually, this may include a theme of basic colors with a vibrant accent color and stylish, 
+      yet not too daring, buttons and fonts. What makes websites memorable are animations such as those implemented with 
+      hover and unique design elements like a different mouse or innovative layout.</p>
+
+    <p>I would like my design to feel simplistic yet warm and comforting. Instead of having one color as the background, 
+      I’ll instead use a background image. I would like to use a light accent color of aliceblue and keep the rest of the 
+      color scheme to whites and browns. Another source of color in my website might be images that I’ve taken, having the 
+      images and text organized into one or two columns. I’d also like my font style to be similar to a paper newspaper, 
+      using a font like Courier New to accomplish this. My ideal audience would be people that are interested in both 
+      writing/literature and technology.</p>
   </div>
     <nav>
       <ul class="writing-samples">
