--- a/work-1/sample-1/index.html
+++ b/work-1/sample-1/index.html
@@ -21,6 +21,12 @@
      </div>
   </nav>
   <main>
+     <nav>
+      <ul class="writing-samples">
+         <li><a href="/work-1/sample-1/">Writing Sample 1</a></li>
+         <li><a href="/work-1/sample-2/">Writing Sample 2</a></li>
+      </ul>
+    </nav>
     <h2>Fake Craig's List Ad</h2>
   </div>
   <div class="boxed">
