--- a/skills/index.html
+++ b/skills/index.html
@@ -22,7 +22,9 @@
   </nav>
   <main>
     <h2>Skills Assignment</h2>
-    <p>Skills assignment goes here.</p>
+    <div class="boxed">
+      <p>Skills assignment goes here.</p>
+    </div>
   </main>
 </body>
 </html>
