--- a/work-1/index.html
+++ b/work-1/index.html
@@ -35,7 +35,7 @@
         tried to just let my imagination run wild with only minor tweaking later. In addition to being creative, 
         I tried to stay true to myself in the “About Me” section, valuing my interests over something that might make the 
         page seem “cooler.” In this way, I hope that my website gives off an air of authenticity. This is the approach I 
-        hope to continue to take with the rest of the creative writing-based assignments.</p> 
+        hope to continue to take with the rest of the creative writing-based assignments.</p><p></p>
         <p>When it comes to my website, 
         I originally wanted a modern, simplistic feel because I tend to like websites I see online 
         that are like this. I implemented a black and white theme and immediately disliked it. It felt too 
@@ -59,7 +59,7 @@
         went to the appropriate pages and adjusting the alignment and spacing. In particular, it was difficult to size 
         the image of myself right so that I didn’t look disproportionate. While not physically difficult, it was also 
         hard to choose a color scheme for my website. I went through a lot of trial and error to find something that I 
-          liked.</p> 
+          liked.</p><p></p>
         <p>Moving forward, I would like to understand picture properties better. For example, I would like to 
         know how to insert an image without changing the background image. I would also like to learn how to align 
         multiple images and work with stylizing images to have borders or filters. In addition, I would like to work with 
