--- a/work-1/sample-2/index.html
+++ b/work-1/sample-2/index.html
@@ -33,7 +33,7 @@
     <p>For me, engaging websites are those that are simplistic enough that the messages or information they are trying to 
       convey stand out. Visually, this may include a theme of basic colors with a vibrant accent color and stylish, 
       yet not too daring, buttons and fonts. What makes websites memorable are animations such as those implemented with 
-      hover and unique design elements like a different mouse or innovative layout.</p>
+      hover and unique design elements like a different mouse or innovative layout.</p><p></p>
 
     <p>I would like my design to feel simplistic yet warm and comforting. Instead of having one color as the background, 
       I’ll instead use a background image. I would like to use a light accent color of aliceblue and keep the rest of the 
