--- a/skills/index.html
+++ b/skills/index.html
@@ -23,7 +23,17 @@
   <main>
     <h2>Skills Assignment</h2>
     <div class="boxed">
-      <p>Skills assignment goes here.</p>
+      <p>- Building a Responsive Portfolio Site (Lynda video): 4 hrs<br />
+- How to Make an Online Portfolio Website from Scratch (Udemy): 4 hrs<br />
+- HTML <a> download Attribute W3 School: 1 hr<br />
+- How TO - Tabs W3 School: 1 hr <br />
+- How TO - Two Column Layout: 1 hr <br />
+- How to Build a Resume Website - The Muse: 1 hr <br />
+- What Should You Include on Your Personal Resume Website?: 1 hr <br />
+- 6 Things You Should Include on Your Personal Website - and 6 Things to Avoid at all costs: 1 hr <br />
+- Bulleted Lists - echoecho.com: 1 hr <br />
+- Why Every Job Seeker Should Have a Personal Website, And What It Should Include - Forbes: 1 hr <br />
+- How to Create a Personal Resume/Portfolio Website - Youtube: 1 hr <br /></p>
     </div>
   </main>
 </body>
