--- a/skills/index.html
+++ b/skills/index.html
@@ -35,6 +35,22 @@
 * Why Every Job Seeker Should Have a Personal Website, And What It Should Include - Forbes: 1 hr <br /><br />
 * How to Create a Personal Resume/Portfolio Website - Youtube: 1 hr <br /></p>
     </div>
+  <h2>Learning Log </h2>
+    <div class="boxed">
+       <table>
+          <tr><th>Start time/date</th><th>End time/date</th><th>Description of focus</th><th>Notes on process</th>
+          <tr><td>2/15/18 4:30 PM</td><td>2/15/18 5:30 PM</td><td>Research</td><td>I searched for videos, websites, and articles to research for my topic.</td></tr>
+          <tr><td>Your text here</td><td>Your text here</td><td>Your text here</td><td>Your text here</td></tr>
+          <tr><td>Your text here</td><td>Your text here</td><td>Your text here</td><td>Your text here</td></tr>
+          <tr><td>Your text here</td><td>Your text here</td><td>Your text here</td><td>Your text here</td></tr>
+          <tr><td>Your text here</td><td>Your text here</td><td>Your text here</td><td>Your text here</td></tr>
+          <tr><td>Your text here</td><td>Your text here</td><td>Your text here</td><td>Your text here</td></tr>
+          <tr><td>Your text here</td><td>Your text here</td><td>Your text here</td><td>Your text here</td></tr>
+          <tr><td>Your text here</td><td>Your text here</td><td>Your text here</td><td>Your text here</td></tr>
+          <tr><td>Your text here</td><td>Your text here</td><td>Your text here</td><td>Your text here</td></tr>
+          <tr><td>Your text here</td><td>Your text here</td><td>Your text here</td><td>Your text here</td></tr>
+      </table>
+    </div>
   </main>
 </body>
 </html>
