--- a/skills/index.html
+++ b/skills/index.html
@@ -40,7 +40,7 @@
        <table>
           <tr><th>Start time/date</th><th>End time/date</th><th>Description of focus</th><th>Notes on process</th>
           <tr><td>2/15/18 4:30 PM</td><td>2/15/18 5:30 PM</td><td>Research</td><td>I searched for videos, websites, and articles to research for my topic.</td></tr>
-          <tr><td>Your text here</td><td>Your text here</td><td>Your text here</td><td>Your text here</td></tr>
+          <tr><td>2/22/18 8:30 PM</td><td>2/22/18 9:00 PM</td><td>What to include in professional website</td><td>I learned about the Do's and Don't's of creating a personal, professional website. One don't that was particularly enlightening to me was to not include jargon such as "innovative" or "hardworking."</td></tr>
           <tr><td>Your text here</td><td>Your text here</td><td>Your text here</td><td>Your text here</td></tr>
           <tr><td>Your text here</td><td>Your text here</td><td>Your text here</td><td>Your text here</td></tr>
           <tr><td>Your text here</td><td>Your text here</td><td>Your text here</td><td>Your text here</td></tr>
