--- a/skills/index.html
+++ b/skills/index.html
@@ -23,7 +23,7 @@
   <main>
     <h2>HTML/CSS - Making an Effective Website for Job Hunting </h2>
     <div class="boxed">
-      <ul type="circle">
+      <ul class="Research List">
           <li>Building a Responsive Portfolio Site (Lynda video): 4 hrs</li>
           <li>How to Make an Online Portfolio Website from Scratch (Udemy): 4 hrs</li>
           <li>HTML download Attribute W3 School: 1 hr</li>
