--- a/skills/index.html
+++ b/skills/index.html
@@ -44,13 +44,7 @@
           <tr><td>2/15/18 4:30 PM</td><td>2/15/18 5:30 PM</td><td>Research</td><td>I searched for videos, websites, and articles to research for my topic.</td></tr>
           <tr><td>2/22/18 8:30 PM</td><td>2/22/18 9:00 PM</td><td>Professional Website Do's and Don't's</td><td>I learned about the Do's and Don't's of creating a personal, professional website. One don't that was particularly enlightening to me was to not include jargon such as "innovative" or "hardworking."</td></tr>
           <tr><td>2/22/18 9:00 PM</td><td>2/22/18 10:00 PM</td><td>Creating Lists</td><td>I learned how to make bulleted and numbered lists and tried to implement them into my website, but I'm still having trouble.</td></tr>
-          /*<tr><td>2/23/18 3:00 PM</td><td>2/23/18 3:30 PM</td><td>Building Resume Website</td><td>I learned three different strategies for turning my resume into a website. One idea, I particularly like is creating new pages for each section of my resume.</td></tr>
-          <tr><td>Your text here</td><td>Your text here</td><td>Your text here</td><td>Your text here</td></tr>
-          <tr><td>Your text here</td><td>Your text here</td><td>Your text here</td><td>Your text here</td></tr>
-          <tr><td>Your text here</td><td>Your text here</td><td>Your text here</td><td>Your text here</td></tr>
-          <tr><td>Your text here</td><td>Your text here</td><td>Your text here</td><td>Your text here</td></tr>
-          <tr><td>Your text here</td><td>Your text here</td><td>Your text here</td><td>Your text here</td></tr>
-          <tr><td>Your text here</td><td>Your text here</td><td>Your text here</td><td>Your text here</td></tr>*/
+          <tr><td>2/23/18 3:00 PM</td><td>2/23/18 3:30 PM</td><td>Building Resume Website</td><td>I learned three different strategies for turning my resume into a website. One idea, I particularly like is creating new pages for each section of my resume.</td></tr>
       </table>
     </div>
   </main>
