--- a/skills/index.html
+++ b/skills/index.html
@@ -46,6 +46,7 @@
           <tr><td>2/22/18 9:00 PM</td><td>2/22/18 10:00 PM</td><td>Creating Lists</td><td>I learned how to make bulleted and numbered lists and tried to implement them into my website, but I'm still having trouble.</td></tr>
           <tr><td>2/23/18 3:00 PM</td><td>2/23/18 3:30 PM</td><td>Building Resume Website</td><td>I learned three different strategies for turning my resume into a website. One idea I particularly like is to create new pages for each section of my resume.</td></tr>
           <tr><td>2/25/18 11:30 AM</td><td>2/25/18 12:00 PM</td><td>Making Downloadable Link</td><td>I learned the HTML code for embedding download files into my website and how to create a new filename for a file after it's downloaded.</td></tr>
+          <tr><td>2/25/18 12:00 PM</td><td>2/25/18 12:30 PM</td><td>Making Tabs</td><td>I learned the process for making tabs and discovered that it requires javascript along with HTML and CSS.</td></tr>
       </table>
     </div>
   </main>
