--- a/skills/index.html
+++ b/skills/index.html
@@ -47,6 +47,7 @@
           <tr><td>2/23/18 3:00 PM</td><td>2/23/18 3:30 PM</td><td>Building Resume Website</td><td>I learned three different strategies for turning my resume into a website. One idea I particularly like is to create new pages for each section of my resume.</td></tr>
           <tr><td>2/25/18 11:30 AM</td><td>2/25/18 12:00 PM</td><td>Making Downloadable Link</td><td>I learned the HTML code for embedding download files into my website and how to create a new filename for a file after it's downloaded.</td></tr>
           <tr><td>2/25/18 12:00 PM</td><td>2/25/18 12:30 PM</td><td>Making Tabs</td><td>I learned the process for making tabs and discovered that it requires javascript along with HTML and CSS.</td></tr>
+          <tr><td>2/25/18 9:00 PM</td><td>2/25/18 9:30 PM</td><td>Making Columns</td><td>I learned the process for making both even and uneven columns.</td></tr>
       </table>
     </div>
   </main>
