--- a/skills/index.html
+++ b/skills/index.html
@@ -48,6 +48,7 @@
           <tr><td>2/25/18 11:30 AM</td><td>2/25/18 12:00 PM</td><td>Making Downloadable Link</td><td>I learned the HTML code for embedding download files into my website and how to create a new filename for a file after it's downloaded.</td></tr>
           <tr><td>2/25/18 12:00 PM</td><td>2/25/18 12:30 PM</td><td>Making Tabs</td><td>I learned the process for making tabs and discovered that it requires javascript along with HTML and CSS.</td></tr>
           <tr><td>2/25/18 9:00 PM</td><td>2/25/18 9:30 PM</td><td>Making Columns</td><td>I learned the process for making both even and uneven columns.</td></tr>
+          <tr><td>2/25/18 9:30 PM</td><td>2/25/18 10:30 PM</td><td>What to Include in Resume Website</td><td>I learned more about what makes a good resume website. I found the idea of including testimonials from previous employers, colleagues, etc. to be really interesting. I also explored some example resume websites for inspiration.</td></tr>
       </table>
     </div>
   </main>
