--- a/skills/index.html
+++ b/skills/index.html
@@ -52,8 +52,9 @@
           <tr><td>2/25/18 12:00 PM</td><td>2/25/18 12:30 PM</td><td>Making Tabs</td><td>I learned the process for making tabs and discovered that it requires javascript along with HTML and CSS.</td></tr>
           <tr><td>2/25/18 9:00 PM</td><td>2/25/18 9:30 PM</td><td>Making Columns</td><td>I learned the process for making both even and uneven columns.</td></tr>
           <tr><td>2/25/18 9:30 PM</td><td>2/25/18 10:30 PM</td><td>What to Include in Resume Website</td><td>I learned more about what makes a good resume website. I found the idea of including testimonials from previous employers, colleagues, etc. to be really interesting. I also explored some example resume websites for inspiration.</td></tr>
-          <tr><td>2/26/18 6:00 PM</td><td>2/26/18 6:30 PM</td><td>What Include/Avoid in a Resume Website</td><td>I learned about what to include/avoid in a resume website and like the idea of including a blog where I could give my opinion on trends in the industry.</td></tr>
+          <tr><td>2/26/18 6:00 PM</td><td>2/26/18 6:30 PM</td><td>What to Include/Avoid in a Personal, Professional Website</td><td>I learned about what to include/avoid in a resume website and like the idea of including a blog where I could give my opinion on trends in the industry.</td></tr>
           <tr><td>2/26/18 6:30 PM</td><td>2/26/18 7:00 PM</td><td>Research</td><td>I searched for more information about creating a blog and for more examples of personal, professional websites.</td></tr>
+          <tr><td>2/26/18 8:30 PM</td><td>2/26/18 9:00 PM</td><td>Blog Layout</td><td>I learned the HTML and CSS for making a basic blog layout with images, main pages, and side columns.</td></tr>
       </table>
     </div>
   </main>
