--- a/skills/index.html
+++ b/skills/index.html
@@ -55,6 +55,7 @@
           <tr><td>2/26/18 6:00 PM</td><td>2/26/18 6:30 PM</td><td>What to Include/Avoid in a Personal, Professional Website</td><td>I learned about what to include/avoid in a resume website and like the idea of including a blog where I could give my opinion on trends in the industry.</td></tr>
           <tr><td>2/26/18 6:30 PM</td><td>2/26/18 7:00 PM</td><td>Research</td><td>I searched for more information about creating a blog and for more examples of personal, professional websites.</td></tr>
           <tr><td>2/26/18 8:30 PM</td><td>2/26/18 9:00 PM</td><td>Blog Layout</td><td>I learned the HTML and CSS for making a basic blog layout with images, main pages, and side columns.</td></tr>
+          <tr><td>2/26/18 9:00 PM</td><td>2/26/18 9:30 PM</td><td>Creating a Great Professional Blog</td><td>I learned some tips for creating a professional blog. One tip was to increase readership by linking to it from my professional social media every time I make a post.</td></tr>
       </table>
     </div>
   </main>
