--- a/skills/index.html
+++ b/skills/index.html
@@ -56,6 +56,7 @@
           <tr><td>2/26/18 6:30 PM</td><td>2/26/18 7:00 PM</td><td>Research</td><td>I searched for more information about creating a blog and for more examples of personal, professional websites.</td></tr>
           <tr><td>2/26/18 8:30 PM</td><td>2/26/18 9:00 PM</td><td>Blog Layout</td><td>I learned the HTML and CSS for making a basic blog layout with images, main pages, and side columns.</td></tr>
           <tr><td>2/26/18 9:00 PM</td><td>2/26/18 9:30 PM</td><td>Creating a Great Professional Blog</td><td>I learned some tips for creating a professional blog. One tip was to increase readership by linking to it from my professional social media every time I make a post.</td></tr>
+          <tr><td>2/27/18 11:00 AM</td><td>2/27/18 1:00 PM</td><td>Professional Website Inspiration</td><td>I looked at 35 different websites and gathered a list of features I liked and would be interested in implementing into my own website. My favorite idea was to include dropdown menus within page links.</td></tr>
       </table>
     </div>
   </main>
