--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -17,6 +17,7 @@
         <li><a href="/skills/">Skills</a></li>
         <li><a href="/presentation/">Presentation</a></li>
         <li><a href="/portfolio/">Final Portfolio</a></li>
+        <li><a href="/practice/">Practice</a><li>
       </ul>
      </div>
   </nav>
