--- a/Practice/index.html
+++ b/Practice/index.html
@@ -24,7 +24,7 @@
   <main>
     <h2>Practice</h2>
     <div class="boxed">
-      <p>Practice work goes here.</p>
+      <p>Downloadable Link: <a href="/resumeplaceholder/" download> </p>
     </div>
   </main>
 </body>
