--- a/Practice/index.html
+++ b/Practice/index.html
@@ -24,7 +24,7 @@
   <main>
     <h2>Practice</h2>
     <div class="boxed">
-      <p>Downloadable Link: <a href="/ResumePlaceholder.docx/" download="Resume Placeholder">Resume Placeholder</a> </p>
+      <p>Downloadable Link: <a href="/ResumePlaceholder.doc/" download="Resume Placeholder">Resume Placeholder</a> </p>
     </div>
   </main>
 </body>
