--- a/skills/index.html
+++ b/skills/index.html
@@ -58,6 +58,7 @@
           <tr><td>2/26/18 8:30 PM</td><td>2/26/18 9:00 PM</td><td>Blog Layout</td><td>I learned the HTML and CSS for making a basic blog layout with images, main pages, and side columns.</td></tr>
           <tr><td>2/26/18 9:00 PM</td><td>2/26/18 9:30 PM</td><td>Creating a Great Professional Blog</td><td>I learned some tips for creating a professional blog. One tip was to increase readership by linking to it from my professional social media every time I make a post.</td></tr>
           <tr><td>2/27/18 11:00 AM</td><td>2/27/18 1:00 PM</td><td>Professional Website Inspiration</td><td>I looked at 35 different websites and gathered a list of features I liked and would be interested in implementing into my own website. My favorite idea was to include dropdown menus within page links.</td></tr>
+          <tr><td>3/14/18 9:00 PM</td><td>3/14/18 10:30 PM</td><td>Implementing Downloadable Links</td><td>I created a practice page on my website to try implementing some of the features I learned about. I implemented a downloadable link.</td></tr>
       </table>
     </div>
   </main>
