--- a/Practice/index.html
+++ b/Practice/index.html
@@ -25,6 +25,10 @@
     <h2>Practice</h2>
     <div class="boxed">
       <p>Downloadable Link: <a href="/rp.doc/" download="Resume Placeholder">Resume Placeholder</a> </p>
+      <div class="row">
+        <div class="column"></div>
+        <div class="column"></div>
+      </div>
     </div>
   </main>
 </body>
