--- a/Practice/index.html
+++ b/Practice/index.html
@@ -26,8 +26,8 @@
     <div class="boxed">
       <p>Downloadable Link: <a href="/rp.doc/" download="Resume Placeholder">Resume Placeholder</a> </p>
       <div class="row">
-        <div class="column"></div>
-        <div class="column"></div>
+        <div class="column"><p>This is the first column.</p></div>
+        <div class="column"><p>This is the second column.</p></div>
       </div>
     </div>
   </main>
