--- a/Practice/index.html
+++ b/Practice/index.html
@@ -24,7 +24,7 @@
   <main>
     <h2>Practice</h2>
     <div class="boxed">
-      <p>Downloadable Link: <a href="/rp.doc/" download="Resume Placeholder">Resume Placeholder</a> </p>
+      <p>Downloadable Link: <a href="/rp.doc/" download="Resume Placeholder">Resume Placeholder</a> </p><br>
       <div class="row">
         <div class="column"><p>This is the first column.</p></div>
         <div class="column"><p>This is the second column.</p></div>
