--- a/skills/index.html
+++ b/skills/index.html
@@ -59,6 +59,8 @@
           <tr><td>2/26/18 9:00 PM</td><td>2/26/18 9:30 PM</td><td>Creating a Great Professional Blog</td><td>I learned some tips for creating a professional blog. One tip was to increase readership by linking to it from my professional social media every time I make a post.</td></tr>
           <tr><td>2/27/18 11:00 AM</td><td>2/27/18 1:00 PM</td><td>Professional Website Inspiration</td><td>I looked at 35 different websites and gathered a list of features I liked and would be interested in implementing into my own website. My favorite idea was to include dropdown menus within page links.</td></tr>
           <tr><td>3/14/18 9:00 PM</td><td>3/14/18 10:30 PM</td><td>Implementing Downloadable Links</td><td>I created a practice page on my website to try implementing some of the features I learned about. I implemented a downloadable link.</td></tr>
+          <tr><td>3/14/18 10:30 PM</td><td>3/14/18 11:30 PM</td><td>Implementing Columns</td><td>I implemented columns and learned how to insert breaks in text for clarity.</td></tr>
+          <tr><td>3/15/18 9:00 AM</td><td>3/15/18 11:00 AM</td><td>Building a Responsive Portfolio Site</td><td>I watched a Lynda video on building a responsive portfolio site. I found it interesting that the video used photoshop to initially create the website layout and then implemented it piece by piece via HTML. This is a great way to plan a design before doing the harder step of implementing it.</td></tr>
       </table>
     </div>
   </main>
