--- a/skills/index.html
+++ b/skills/index.html
@@ -25,8 +25,8 @@
     <h2>HTML/CSS - Making an Effective Website for Job Hunting </h2>
     <div class="boxed">
       <ul class="research-list">
-          <li>Building a Responsive Portfolio Site (Lynda video): 2 hrs <a href="https://www.lynda.com/CSS-tutorials/Welcome/372808/413142-4.html?srchtrk=index%3a1%0alinktypeid%3a2%0aq%3aportfolio+website+html%0apage%3a1%0as%3arelevance%0asa%3atrue%0aproducttypeid%3a2">Link</a></li>
-          <li>How to Make an Online Portfolio Website from Scratch (Udemy): 4 hrs</li>
+          <li>Building a Responsive Portfolio Site: 2 hrs <a href="https://www.lynda.com/CSS-tutorials/Welcome/372808/413142-4.html?srchtrk=index%3a1%0alinktypeid%3a2%0aq%3aportfolio+website+html%0apage%3a1%0as%3arelevance%0asa%3atrue%0aproducttypeid%3a2">Link</a></li>
+          <li>How To Make Rounded Images With CSS: 1 hr <a href="https://www.abeautifulsite.net/how-to-make-rounded-images-with-css">Link</a></li>
           <li>HTML download Attribute W3 School: 1 hr</li>
           <li>How TO - Tabs W3 School: 1 hr</li>
           <li>How TO - Two Column Layout: 1 hr</li>
