--- a/Practice/index.html
+++ b/Practice/index.html
@@ -28,6 +28,7 @@
       <div class="row">
         <div class="column"><p>This is the first column.</p></div>
         <div class="column"><p>This is the second column.</p></div>
+        <img class="img-circle" src="/doner.jpg">
       </div>
     </div>
   </main>
