--- a/skills/index.html
+++ b/skills/index.html
@@ -61,6 +61,7 @@
           <tr><td>3/14/18 9:00 PM</td><td>3/14/18 10:30 PM</td><td>Implementing Downloadable Links</td><td>I created a practice page on my website to try implementing some of the features I learned about. I implemented a downloadable link.</td></tr>
           <tr><td>3/14/18 10:30 PM</td><td>3/14/18 11:30 PM</td><td>Implementing Columns</td><td>I implemented columns and learned how to insert breaks in text for clarity.</td></tr>
           <tr><td>3/15/18 9:00 AM</td><td>3/15/18 11:00 AM</td><td>Building a Responsive Portfolio Site</td><td>I watched a Lynda video on building a responsive portfolio site. I found it interesting that the video used photoshop to initially create the website layout and then implemented it piece by piece via HTML. This is a great way to plan a design before doing the harder step of implementing it.</td></tr>
+          <tr><td>3/15/18 12:00 PM</td><td>3/15/18 1:00 PM</td><td>Round Image Border</td><td>I learned how to make rounded borders around images, and implemented this in my practice section.</td></tr>
       </table>
     </div>
   </main>
