--- a/skills/index.html
+++ b/skills/index.html
@@ -39,6 +39,7 @@
           <li>HOW TO - Blog Layout W3 School: 30 min</li>
           <li>Five Tips to Create a Great Professional Blog: 30 min <a href="https://www.workitdaily.com/creating-professional-blog/">Link</a></li>
           <li>35 Bet Personal Blogs We've Ever Seen - The Muse: 1 hr <a href="https://www.themuse.com/advice/the-35-best-personal-websites-weve-ever-seen">Link</a></li>
+          <li>CSS Image Opacity/Transparency W3 Schools 1 hr</li>
       </ul>
     </div>
   <h2>Learning Log </h2>
@@ -63,6 +64,7 @@
           <tr><td>3/15/18 9:00 AM</td><td>3/15/18 11:00 AM</td><td>Building a Responsive Portfolio Site</td><td>I watched a Lynda video on building a responsive portfolio site. I found it interesting that the video used photoshop to initially create the website layout and then implemented it piece by piece via HTML. This is a great way to plan a design before doing the harder step of implementing it.</td></tr>
           <tr><td>3/15/18 12:00 PM</td><td>3/15/18 1:00 PM</td><td>Round Image Border</td><td>I learned how to make rounded borders around images, and implemented this in my practice section.</td></tr>
           <tr><td>3/15/18 1:00 PM</td><td>3/15/18 1:30 PM</td><td>Research</td><td>I looked for resources for smaller features that would make my portfolio site look nicer.</td></tr>
+          <tr><td>3/15/18 4:00 PM</td><td>3/15/18 4:00 PM</td><td>Image Opacity</td><td>I read about how to implement different kinds of image opacity and then practiced using image opacity with hover.</td></tr>
       </table>
     </div>
   </main>
