--- a/presentation/index.html
+++ b/presentation/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>Rachael's Website</title>
   <link rel="stylesheet" type="text/css" href="/style.css">
+  <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
 </head>
 <body>
    <div align="center">
