--- a/work-1/sample-2/index.html
+++ b/work-1/sample-2/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>Rachael's Website</title>
   <link rel="stylesheet" type="text/css" href="/style.css">
+  <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
 </head>
 <body>
   <div align="center">
@@ -17,6 +18,7 @@
         <li><a href="/skills/">Skills</a></li>
         <li><a href="/presentation/">Presentation</a></li>
         <li><a href="/portfolio/">Final Portfolio</a></li>
+        <li><a href="/Practice/">Practice</a></li>
       </ul>
      </div>
   </nav>
