--- a/skills/index.html
+++ b/skills/index.html
@@ -41,7 +41,7 @@
           <li>Five Tips to Create a Great Professional Blog: 30 min <a href="https://www.workitdaily.com/creating-professional-blog/">Link</a></li>
           <li>35 Bet Personal Blogs We've Ever Seen - The Muse: 1 hr <a href="https://www.themuse.com/advice/the-35-best-personal-websites-weve-ever-seen">Link</a></li>
           <li>CSS Image Opacity/Transparency W3 Schools 1 hr</li>
-          <li>Favicon Generator <a href="http://tools.dynamicdrive.com/favicon/"</a> & Favicon and App Icon Generator <a href="https://www.favicon-generator.org/"/a></li>
+          <li>Favicon Generator <a href="http://tools.dynamicdrive.com/favicon/">Link</a> & Favicon and App Icon Generator <a href="https://www.favicon-generator.org/">Link</a></li>
       </ul>
     </div>
   <h2>Learning Log </h2>
