--- a/skills/index.html
+++ b/skills/index.html
@@ -42,6 +42,7 @@
           <li>35 Bet Personal Blogs We've Ever Seen - The Muse: 1 hr <a href="https://www.themuse.com/advice/the-35-best-personal-websites-weve-ever-seen">Link</a></li>
           <li>CSS Image Opacity/Transparency W3 Schools 1 hr</li>
           <li>Favicon Generator <a href="http://tools.dynamicdrive.com/favicon/">Link</a> & Favicon and App Icon Generator <a href="https://www.favicon-generator.org/">Link</a></li>
+          <li>Cursor <a href="https://developer.mozilla.org/en-US/docs/Web/CSS/cursor">Link</a></li>
       </ul>
     </div>
   <h2>Learning Log </h2>
@@ -67,7 +68,8 @@
           <tr><td>3/15/18 12:00 PM</td><td>3/15/18 1:00 PM</td><td>Round Image Border</td><td>I learned how to make rounded borders around images, and implemented this in my practice section.</td></tr>
           <tr><td>3/15/18 1:00 PM</td><td>3/15/18 2:00 PM</td><td>Research</td><td>I looked for resources for smaller features that would make my portfolio site look nicer.</td></tr>
           <tr><td>3/15/18 4:00 PM</td><td>3/15/18 5:00 PM</td><td>Image Opacity</td><td>I read about how to implement different kinds of image opacity and then practiced using image opacity with hover.</td></tr>
-          <tr><td>3/16/18 12:00 PM</td><td>3/16/18 2:00 PM</td><td>Adding Favicon</td><td>I looked at two favicon website generators, designed my favicon image, turned it into favicon.ico, and updated each page of my website to include it. I'm still not sure if it worked because the website said it could take a few days to update.</td></tr>
+          <tr><td>3/16/18 11:00 PM</td><td>3/16/18 1:00 PM</td><td>Adding Favicon</td><td>I looked at two favicon website generators, designed my favicon image, turned it into favicon.ico, and updated each page of my website to include it. I'm still not sure if it worked because the website said it could take a few days to update.</td></tr>
+         <tr><td>3/16/18 1:00 PM </td><td>3/16/18 2:00 PM</td><td>Adding Different Cursors</td><td>I read about how to implement different cursors based on user action and browsed the different types of cursors. I implemented a pointer cursor, but then realized that my website was already doing this. I'm not sure if this is a common function or if it's incorporated into GitHub. However, this could still be useful if I wanted to use an unconventional cursor.</li>
       </table>
     </div>
   </main>
