--- a/skills/index.html
+++ b/skills/index.html
@@ -23,7 +23,11 @@
      </div>
   </nav>
   <main>
-    <h2>HTML/CSS - Making an Effective Website for Job Hunting </h2>
+    <h2>Topic</h2>
+    <div class="boxed">
+      <p>For my self-guided skills assignment, I want learn about what makes an effective portfolio site and learn how to implement some of the features included in them.</p>
+    </div>
+    <h2>Curriculum</h2>
     <div class="boxed">
       <ul class="research-list">
           <li>Building a Responsive Portfolio Site: 2 hrs <a href="https://www.lynda.com/CSS-tutorials/Welcome/372808/413142-4.html?srchtrk=index%3a1%0alinktypeid%3a2%0aq%3aportfolio+website+html%0apage%3a1%0as%3arelevance%0asa%3atrue%0aproducttypeid%3a2">Link</a></li>
@@ -45,7 +49,7 @@
           <li>Cursor <a href="https://developer.mozilla.org/en-US/docs/Web/CSS/cursor">Link</a></li>
       </ul>
     </div>
-  <h2>Learning Log </h2>
+  <h2>Learning Log</h2>
     <div class="boxed">
        <table>
           <tr><th align="center">Start time/date</th><th align="center">End time/date</th><th align="center">Description of focus</th><th align="center">Notes on process</th>
@@ -71,6 +75,10 @@
           <tr><td>3/16/18 11:00 PM</td><td>3/16/18 1:00 PM</td><td>Adding Favicon</td><td>I looked at two favicon website generators, designed my favicon image, turned it into favicon.ico, and updated each page of my website to include it. I'm still not sure if it worked because the website said it could take a few days to update.</td></tr>
          <tr><td>3/16/18 1:00 PM </td><td>3/16/18 2:00 PM</td><td>Adding Different Cursors</td><td>I read about how to implement different cursors based on user action and browsed the different types of cursors. I implemented a pointer cursor, but then realized that my website was already doing this. I'm not sure if this is a common function or if it's incorporated into GitHub. However, this could still be useful if I wanted to use an unconventional cursor.</li>
       </table>
+    </div>
+    <h2>Reflection</h2>
+    <div class="boxed">
+      <p>Reflection goes here.</p>
     </div>
   </main>
 </body>
