--- a/skills/index.html
+++ b/skills/index.html
@@ -25,7 +25,7 @@
   <main>
     <h2>Topic</h2>
     <div class="boxed">
-      <p>For my self-guided skills assignment, I want learn about what makes an effective portfolio site and learn how to implement some of the features included in them.</p>
+      <p>For my self-guided skills assignment, I want learn about what makes an effective portfolio site and learn how to implement some of the features included in it.</p>
     </div>
     <h2>Curriculum</h2>
     <div class="boxed">
